still trying to fix eise alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 .eise {
     height: 380px;
     background: url(../img/eise.jpg) no-repeat left;
-    padding: 0px 20px 80px 20px;
+    padding: 40px 20px 80px 20px;
 }
 
 .eise h1{
@@ -112,6 +112,7 @@ body { margin: 0; padding: 0; zoom: 1; }
     padding: 0px 20px 0 20px;
     line-height: 20px;
     margin-bottom:0;
+    margin-top:0;
 }
 
 .eise h2{
